# Poetry-Fastapi-Todo

./: README.md  pyproject.toml
app/: crud.py  db.py  todo.py
tests/: test_crud.py
